# bo

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  deny.toml
.claude/: settings.json
.claude/hooks/: check-rust.sh
.github/workflows/: ci.yml  release.yml
.pi/extensions/: check-rust.ts
adrs/: 001-deterministic-pipelines-over-internal-agent.md  003-agentic-retrieval-for-query.md
corpora/: README.md
corpora/default/: urls.txt
corpora/video/: urls.txt
docs/: corpus.md  principles.md
docs/adrs/: 001.md  002.md  004.md
docs/milestones/: oss-release-backlog.md  oss-release.md  v0.0.2.md
docs/milestones/closed/: v0.0.1.md
milestones/: oss-release-backlog.md  oss-release.md
scratchpad/: 2026-05-06.md  2026-05-07.md  2026-05-08.md  2026-05-08_2.md  2026-05-08_3.md  2026-05-09.md  2026-05-10.md  2026-05-10_2.md  2026-05-10_3.md  2026-05-11.md  features.md
scripts/: check-rust.sh  dogfood-collect  smoke-test-install.sh
specs/add-compile-command/: implementation.md
specs/chore/organize-src-by-layers/: analysis.md  implementation.md  plan.md  spec.md  (+1 more)
src/: add.rs  agent.rs  branch.rs  collect.rs  compile.rs  config.rs  extract.rs  fetch.rs  frontmatter.rs  index.rs  leaf.rs  ledger.rs  lib.rs  list.rs  main.rs  markdown.rs  pipeline.rs  slug.rs  tree.rs
src/cli/: collect.rs  compile.rs  config.rs  json.rs  list.rs  mod.rs  query.rs  raze.rs  search.rs  seed.rs  show.rs  status.rs
src/domain/: branch.rs  frontmatter.rs  index.rs  leaf.rs  mod.rs  slug.rs  tree.rs
src/engine/: agent.rs  auth.rs  config.rs  extract.rs  fetch.rs  mod.rs  quality.rs  state.rs  summary.rs
src/tests/: adapters_youtube_innertube_tests.rs  adapters_youtube_mod_tests.rs  adapters_youtube_transcript_tests.rs  adapters_youtube_url_tests.rs  cli_collect_tests.rs  cli_compile_tests.rs  cli_config_tests.rs  cli_json_tests.rs  cli_list_tests.rs  cli_query_tests.rs  cli_raze_tests.rs  cli_search_tests.rs  cli_seed_tests.rs  cli_show_tests.rs  cli_status_tests.rs  domain_branch_tests.rs  domain_frontmatter_tests.rs  domain_index_tests.rs  domain_leaf_tests.rs  domain_slug_tests.rs  domain_tree_tests.rs  engine_auth_tests.rs  engine_config_tests.rs  engine_extract_tests.rs  engine_fetch_tests.rs  engine_llm_openai_provider_tests.rs  engine_llm_tests.rs  engine_quality_tests.rs  engine_state_tests.rs  engine_summary_tests.rs  main_tests.rs
tests/: integration.rs  integration_cli.rs  integration_compile.rs  integration_json.rs  integration_network.rs  integration_query.rs  integration_search.rs  integration_status.rs  spike_trafilatura.rs  test_urls.rs
(+92 files in other folders)
