[package]
name = "bo"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "bo"
path = "src/lib.rs"

[dependencies]
trafilatura = { version = "0.3", features = ["markdown"] }
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
url = "2"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
