[package]
name = "bo"
version = "0.0.1"
edition = "2021"
license = "MIT"

[lib]
name = "bo"
path = "src/lib.rs"

[dependencies]
trafilatura = { version = "0.3", features = ["markdown"] }
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
url = "2"
quick-xml = "0.37"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

async-openai = { version = "0.34", features = ["chat-completion"] }
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "macros"] }
serde_yaml_ng = "0.10"
dotenvy = "0.15.7"
regex = "1.12.3"

[dev-dependencies]
serial_test = "3.4.0"
tempfile = "3"
