[package]
name = "bo"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "Collect web pages into a local markdown knowledge tree"
repository = "https://github.com/jellysnake/bo"
homepage = "https://github.com/jellysnake/bo"
keywords = ["cli", "knowledge-base", "markdown", "rag", "web"]
categories = ["command-line-utilities"]

[lib]
name = "bo"
path = "src/lib.rs"

[dependencies]
trafilatura = { version = "0.3", features = ["markdown"] }
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
url = "2"
quick-xml = "0.37"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

async-openai = { version = "0.34", features = ["chat-completion"] }
async-trait = "0.1"
backoff = { version = "0.4.0", features = ["tokio"] }
tokio = { version = "1", features = ["rt", "macros", "time"] }
serde_yaml_ng = "0.10"
rpassword = "7.5.2"

[dev-dependencies]
serial_test = "3.4.0"
tempfile = "3"
